--- a/articles/handling-website-design-with-grids.haml
+++ b/articles/handling-website-design-with-grids.haml
@@ -52,7 +52,7 @@
     ## Doing better
     People who know me might already know that one of my biggest qualms with abstractions is that they prevent people from understanding the code or process that they're abstracting. I feel very different about [LessCSS](http://lesscss.org/) &mdash; It uses real css, with some smart extensions. 
     
-    So, my aim is to keep my HTML clean, semantically correct and reduce additional of strictly presentational classes. 
+    So, my aim is to keep my HTML clean, semantically correct and reduce the addition of strictly presentational classes. 
     
     LessCSS provides some basic mathematical and "mixin" features (Amongst some others). These are run through an engine that returns good old regular css, it basically means that you get to write in a more powerful manner, producing wonderful machine-readable CSS. 
     
