--- a/articles/handling-website-design-with-grids.haml
+++ b/articles/handling-website-design-with-grids.haml
@@ -54,7 +54,8 @@
     
     So, my aim is to keep my HTML clean, semantically correct and reduce the addition of strictly presentational classes. 
     
-    LessCSS provides some basic mathematical and "mixin" features (Amongst some others). These are run through an engine that returns good old regular css, it basically means that you get to write in a more powerful manner, producing wonderful machine-readable CSS. 
+    LessCSS provides some basic mathematical and "mixin" features (Amongst others). 
+    These functions are run through an engine that returns good old regular CSS, it basically means that you get to write in a more powerful manner, producing wonderful machine-readable CSS. 
     
     ### Time for a deep breath!
     
@@ -72,7 +73,7 @@
     
         .selector { .column; margin-right: 0; }
         
-    For now, this is how I'm going to run. I still find it fast for layouts and easy to manipulate.
+    For now, this is how I'm going to run. I still find it fast for layouts and easy to manipulate. If you've got some commentary or ideas on what would be better, be sure to drop me a line.
     
 .column.one.note
   :smartypants
