Note for people new to less

--- a/articles/handling-website-design-with-grids.haml
+++ b/articles/handling-website-design-with-grids.haml
@@ -54,7 +54,7 @@
     
     So, my aim is to keep my HTML clean, semantically correct and reduce the addition of strictly presentational classes. 
     
-    LessCSS provides some basic mathematical and "mixin" features (Amongst others). 
+    LessCSS provides some basic mathematical and "mixin" (explained a little, below.) features (Amongst others). 
     These functions are run through an engine that returns good old regular CSS, it basically means that you get to write in a more powerful manner, producing wonderful machine-readable CSS. 
     
     ### Time for a deep breath!
