Notes about columns and gutters

--- a/articles/handling-website-design-with-grids.haml
+++ b/articles/handling-website-design-with-grids.haml
@@ -13,6 +13,7 @@
     Basically, files named `h-grid-12.png`, `h-grid-6.png` and `h-grid-1.png` could be displayed using a secret modifier code (Its `Shift+H`, sorry Tim.)
     
     [![Screenshot of the Tweeps site](http://img.skitch.com/20100317-bnihqheathcgxd3jqubdft52ju.jpg "The grid on tweeps")](http://wds09.tweeps.webdirections.org/)
+    #### The red tubes are "columns", the gaps in between are known as "gutters".
     
     People, including myself are building sites using grids. Now it seems to me that when you're designing in a browser† you want to be able to follow the grid's principals all the way through the process. 
     
