Added jquery and external tracking script

--- a/views/plain.haml
+++ b/views/plain.haml
@@ -25,4 +25,5 @@
     %script{ :type => "text/javascript" }
       _uacct = "UA-139707-2";
       urchinTracker();
-
+    %script{:type => "text/javascript", :src => "/js/jquery-1.4.2.min.js"}
+    %script{:type => "text/javascript", :src => "/js/track-external.js"}
