--- a/views/layout.haml
+++ b/views/layout.haml
@@ -30,5 +30,6 @@
     %script{ :type => "text/javascript" }
       _uacct = "UA-139707-2";
       urchinTracker();
+    %script{:type => "text/javascript", :src => "/js/jquery-1.4.2.min.js"}
     %script{:type => "text/javascript", :src => "/js/track-external.js"}
 
