Use sections, not divs

--- a/public/css/base.less
+++ b/public/css/base.less
@@ -68,9 +68,9 @@ section#content p { color: #333333; }
 
 section.about {
 	#personal { .column(8); }
-	.bio { .column(4); margin-top: 2em; }
-	.colophon { .column(1); margin-top: 2em; }
-	#special-projects { color: #666; margin-bottom: 115px; .column(3); }
+	section.bio { .column(4); margin-top: 2em; }
+	section.colophon { .column(1); margin-top: 2em; }
+	section#special-projects { color: #666; margin-bottom: 115px; .column(3); }
 }
 
 section#footer { line-height: 1.1em; background-color: black; overflow: hidden; margin-top: 40px; padding-bottom: 25px; }
