--- a/views/about.haml
+++ b/views/about.haml
@@ -7,7 +7,7 @@
   #personal
     %h2 Personal
     %img{:src => "/images/me.jpg"}
-    .bio
+    %section.bio
       :smartypants
         I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
 
@@ -18,10 +18,10 @@
         My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.        
       
         If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
-    .colophon.note
+    %section.colophon.note
       :smartypants
         Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
-  #special-projects
+  %section#special-projects
     :smartypants
       ## Special projects
       Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
