Tweak to article formatting

--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -19,6 +19,8 @@
 
     !["The TinyMCE demo toolbar"](http://img.skitch.com/20100405-dwa548t42tyrhm68mqgnie95j6.jpg)
 
-    "Good ideas" can skew your goals and cause you to miss your market. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around, write down the user story or scenario, not the end result of the implementation. If it still applies in 6 months, go for it. 
+    "Good ideas" can skew your goals and cause you to miss your market. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around. 
+    
+    Write down the user story or scenario, not the end result of the implementation. If it still applies in 6 months, go for it. 
     
     We all have great ideas, but to be fair to our craft, sometimes we have to forget them. 
