Tweak to article wording

--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -9,7 +9,7 @@
     
     I think I can personally count the occasions on one hand.
     
-    From what I've seen over the last few years of developing web applications is that the cream always rises to the top. That is, if you've discussed an idea through its courses enough with your team, everyone should be able to coherently dictate the concept.
+    From what I've seen over the last few years of developing web applications is that the cream always rises to the top. That is, if you've discussed an idea through its courses, everyone in your team should be able to coherently dictate the concept.
 
     If your team can't hold the mechanics (not the scope) of what they're building in their heads, you're either doing too much or what you're doing is just too complicated. Simplify, and try again.
 
