Added a sidebar note

--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -1,6 +1,6 @@
 -# title: Stop writing plans
 -# published: 2010-04-05
--# excerpt: We all have great ideas, but to be fair to our craft, sometimes we have to forget them. 
+-# excerpt: We all have great ideas, but to be fair to our craft, sometimes we have to forget them.
 - # keywords: software, design, planning, clients, web development
 .column.eight
   :smartypants
@@ -24,3 +24,7 @@
     Write down the user story or scenario, not the end result of the implementation. If it still applies in 6 months, go for it. 
     
     We all have great ideas, but to be fair to our craft, sometimes we have to forget them. 
+
+.column.one.note
+  :smartypants
+    What I'm discussing is pretty much only for teams of people working on single products. In an agency situation, where you have many projects ongoing in parallel, this doesn't really apply.
