Added the Note:

--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -27,4 +27,4 @@
 
 .column.one.note
   :smartypants
-    What I'm discussing is pretty much only for teams of people working on single products. In an agency situation, where you have many projects ongoing in parallel, this doesn't really apply.
+    Note: What I'm discussing is pretty much only for teams of people working on single products. In an agency situation, where you have many projects ongoing in parallel, this doesn't really apply.
