--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -9,19 +9,17 @@
     
     I think I can personally count the occasions on one hand.
     
-    From what I've seen over the last few years of developing web applications is that the cream always rises to the top. That is, if you've discussed an idea through its courses, everyone in your team should be able to coherently dictate the concept.
+    From what I've seen over the last few years of developing web applications is that the cream always rises to the top. That is, if you've discussed a feature idea through its courses, everyone in your team should be able to coherently dictate the concept.
+    
+    When you decide to put a feature off, the notion of even considering its inclusion _one day_ is a waste of time, that is; [Muda (無駄)](http://en.wikipedia.org/wiki/Muda_\(Japanese_term\)). So why write it down?
 
-    If your team can't hold the mechanics (not the scope) of what they're building in their heads, you're either doing too much or what you're doing is just too complicated. Simplify, and try again.
-
-    Of course, there are always details that the project leads need to discuss in detail and occasionally put into words. But it should never impede on the creative process.
-
-    Recording an idea is like making a contract to a business that you will indeed one day build a feature, this can be vastly damaging to the development of an idea or a business, and its why we see toolbars like this.
+    Of course, there are always details that the project leads need to discuss in detail and occasionally put into words. But it should never impede on the creative process. Recording an idea is like making a contract that reads "we will build this one day", this can be vastly damaging to the development of an idea or a business, and its why we see toolbars like this.
 
     !["The TinyMCE demo toolbar"](http://img.skitch.com/20100405-dwa548t42tyrhm68mqgnie95j6.jpg)
 
-    "Good ideas" can skew your goals and cause you to miss your market. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around. 
+    A "Good idea" can skew your goals and cause you to miss your real goals. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around. 
     
-    Write down the user story or scenario, not the end result of the implementation. If it still applies in 6 months, go for it. 
+    Write down the user story or scenario, not the implemented result that you've pre-conceptualised. If it still applies in 6 months, go for it, plan it then with the new contraints of your application, not those that existed when you thought of the idea. An application is an ecosystem, not a series of features.
     
     We all have great ideas, but to be fair to our craft, sometimes we have to forget them. 
 
