--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -17,7 +17,7 @@
 
     !["The TinyMCE demo toolbar"](http://img.skitch.com/20100405-dwa548t42tyrhm68mqgnie95j6.jpg)
 
-    A "Good idea" can skew your goals and cause you to miss your real goals. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around. 
+    A "Good idea" can skew your vision and cause you to miss your real goals. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around. 
     
     Write down the user story or scenario, not the implemented result that you've pre-conceptualised. If it still applies in 6 months, go for it, plan it then with the new contraints of your application, not those that existed when you thought of the idea. An application is an ecosystem, not a series of features.
     
