Added some additional context to the article

--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -4,7 +4,7 @@
 - # keywords: software, design, planning, clients, web development
 .column.eight
   :smartypants
-    I'm often surprised when a client or co-worker decides to record the plans we've made during a feature design session.
+    I'm often surprised when a client or co-worker decides to record the plans made during a feature design session when its decided that the feature won't be completed during the next iteration.
     Seen someone take a photo of the whiteboard? How many times have you actually ever referenced those whiteboard photos? 
     
     I think I can personally count the occasions on one hand.
@@ -17,9 +17,11 @@
 
     !["The TinyMCE demo toolbar"](http://img.skitch.com/20100405-dwa548t42tyrhm68mqgnie95j6.jpg)
 
-    A "Good idea" can skew your vision and cause you to miss your real goals. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure, I get it. Really, they're thinking about it the wrong way around. 
+    A "Good idea" can skew your vision and cause you to miss your real goals. Skeptics will say "Well, I have to tell our customers what we're delivering.", and sure; I get it. Really though, they're thinking about it the wrong way around. 
     
-    Write down the user story or scenario, not the implemented result that you've pre-conceptualised. If it still applies in 6 months, go for it, plan it then with the new contraints of your application, not those that existed when you thought of the idea. An application is an ecosystem, not a series of features.
+    Write down the user story or scenario, not the implemented result that you've pre-conceptualised. That is, write about the problem that you're aiming to address.
+    
+    If it still applies in 6 months, go for it, plan it then with the new contraints of your application, not those that existed when you thought of the idea. An application is an ecosystem, not a series of features.
     
     We all have great ideas, but to be fair to our craft, sometimes we have to forget them. 
 
