--- a/articles/stop-writing-down-your-plans.haml
+++ b/articles/stop-writing-down-your-plans.haml
@@ -4,7 +4,7 @@
 - # keywords: software, design, planning, clients, web development
 .column.eight
   :smartypants
-    I'm often surprised when a client or co-worker decides to record the plans made during a feature design session when its decided that the feature won't be completed during the next iteration.
+    I'm often surprised when a client or co-worker decides to record the plans made during a feature design session when it has been decided that the feature won't be completed during the next iteration.
     Seen someone take a photo of the whiteboard? How many times have you actually ever referenced those whiteboard photos? 
     
     I think I can personally count the occasions on one hand.
