--- a/views/inner_layout.haml
+++ b/views/inner_layout.haml
@@ -24,6 +24,7 @@
     %section#footer
       %section
         = partial "about"
+        = partial "event"
         = partial "elsewhere"
         = partial "cc"
     %script{ :src => "http://www.google-analytics.com/urchin.js", :type => "text/javascript" }
