Added link relations

--- a/views/_about.haml
+++ b/views/_about.haml
@@ -11,4 +11,4 @@
       contact via 
       %a{:href => entity_encode("mailto:ben.schwarz@gmail.com"), :title => "Send an email to the author of this site"} email
       or
-      %a{:href => "/about", :title => "Read more about the author of this site"} read more
+      %a{:href => "/about", :title => "Read more about the author of this site", :rel => "author"} read more
