--- a/views/index.haml
+++ b/views/index.haml
@@ -11,7 +11,7 @@
       %li
         %span.source
           from
-          %a{:href => "/articles"} articles
+          %a{:href => "/articles", :rel => "archives"} articles
     %ul.images
       = partial "images", :image => @image
   
